--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
 @import "modules/footer";
 @import "modules/modal";
 @import "modules/button";
+@import "modules/navtabs";
 
 // pages
 @import "pages/home";
