--- a/app/views/books/_index_tabs.html.erb
+++ b/app/views/books/_index_tabs.html.erb
@@ -3,6 +3,8 @@
     <%= active_link_to "書き込んだ人", commented_books_path, class: "nav-link" %>
   </li>
   <li class="nav-item">
-    <%= active_link_to "フォロー中", following_books_path, class: "nav-link" %>
+    <%# FIXME: Twitter機能実装までコメントアウト %>
+    <%#= active_link_to "フォロー中", following_books_path, class: "nav-link" %>
+    <%= active_link_to "全ユーザー", following_books_path, class: "nav-link" %>
   </li>
 </ul>
