apply service color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@
 @import "modules/modal";
 @import "modules/navtabs";
 @import "modules/button";
+@import "modules/pagination";
 
 // pages
 @import "pages/home";
