--- a/app/assets/stylesheets/bases/_original-variables.scss
+++ b/app/assets/stylesheets/bases/_original-variables.scss
@@ -3,6 +3,7 @@
  ****************/
 
 // colors
-$good-pink: #FFECEC;
-$bad-blue: #E2FFF7;
-$blackboard: #26442b;
+$good-pink: #e07171;
+$bad-blue: #30aebe;
+$service-color: #ffb900;
+$service-light-color: #fae9bb;
