--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -69,7 +69,7 @@
         </h2>
       </div>
       <div class="modal-body text-center">
-        <%= link_to "TOPページへ", root_path, class: "btn btn-info btn-block"  %>
+        <%= link_to "TOPページへ", root_path, class: "btn btn-service btn-block"  %>
         <button type="button" class="btn btn-default btn-link mt-3" data-dismiss="modal">
           閉じる
         </button>
