--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <h1 class="page-heading__title mb-4">
       多くの人にシェアして<br>評定を書いてもらおう！
     </h1>
-    <%= link_to "評定を募集する！", "#", class: "btn btn-info btn-round btn-lg shadow-sm disabled" %>
+    <%= link_to "評定を募集する！", "#", class: "btn btn-service btn-round btn-lg shadow-sm" %>
   </section>
 <% else %>
   <section class="mb-4">
@@ -28,12 +28,16 @@
     <% end %>
     <%= render partial: "books/book_card", locals: { user: @user, book: @book, reviews: @reviews } %>
     <% if !user_signed_in? %>
-      <p class="mb-2">ログインして、自分の通信簿を作ってみよう！</p>
-      <%= link_to "自分の通信簿を作る！", root_path, class: "btn btn-info btn-round shadow-sm" %>
+      <p class="mb-2">
+        ログインして、自分の通信簿を作ってみよう！
+      </p>
+      <%= link_to "自分の通信簿を作る！", root_path, class: "btn btn-service btn-round shadow-sm" %>
     <% end %>
   </div>
   <% if user_signed_in? && @user.id == current_user.id %>
-    <p class="text-center">こっそり自分の通信簿もつけられます...！</p>
+    <p class="text-center mb-3">
+      こっそり自分の通信簿もつけられます...！
+    </p>
     <section class="mb-4">
       <%= render partial: "books/review_form", locals: { user: @user, book: @book, review: @review } %>
     </section>
