--- a/app/assets/stylesheets/pages/reviews.scss
+++ b/app/assets/stylesheets/pages/reviews.scss
@@ -6,13 +6,7 @@
   overflow: hidden;
 
   &__container {
-    &--good {
-      background: $good-pink;
-    }
-
-    &--bad {
-      background: $bad-blue;
-    }
+    background: #f5f5f5;
   }
 
   &__label {
@@ -20,6 +14,14 @@
     padding-left: 15px;
     margin-bottom: 5px;
     font-weight: bold;
+
+    &--good {
+      color: $good-pink;
+    }
+
+    &--bad {
+      color: $bad-blue;
+    }
   }
 
   &__note {
