--- a/app/assets/stylesheets/templates/scss/paper-kit/_pagination.scss
+++ b/app/assets/stylesheets/templates/scss/paper-kit/_pagination.scss
@@ -30,31 +30,31 @@
     color: $white-color;
 }
 
-.nav-pills-primary > li > a,
-.pagination-primary > li > a,
-.pagination-primary > li > span,
-.pagination-primary > li:first-child > a,
-.pagination-primary > li:first-child > span,
-.pagination-primary > li:last-child > a,
-.pagination-primary > li:last-child > span{
-    border: 2px solid $primary-color;
-    color: $primary-color;
+.nav-pills-service > li > a,
+.pagination-service > li > a,
+.pagination-service > li > span,
+.pagination-service > li:first-child > a,
+.pagination-service > li:first-child > span,
+.pagination-service > li:last-child > a,
+.pagination-service > li:last-child > span{
+    border: 2px solid $service-color;
+    color: $service-color;
 }
 
-.nav-pills-primary > li.active > a,
-.nav-pills-primary > li.active > a:hover,
-.nav-pills-primary > li.active > a:focus,
-.pagination-primary > li > a:hover,
-.pagination-primary > li > a:focus,
-.pagination-primary > li > a:active,
-.pagination-primary > li.active > a,
-.pagination-primary > li.active > span,
-.pagination-primary > li.active > a:hover,
-.pagination-primary > li.active > span:hover,
-.pagination-primary > li.active > a:focus,
-.pagination-primary > li.active > span:focus{
-   background-color: $primary-color !important;
-   border-color: $primary-color !important;
+.nav-pills-service > li.active > a,
+.nav-pills-service > li.active > a:hover,
+.nav-pills-service > li.active > a:focus,
+.pagination-service > li > a:hover,
+.pagination-service > li > a:focus,
+.pagination-service > li > a:active,
+.pagination-service > li.active > a,
+.pagination-service > li.active > span,
+.pagination-service > li.active > a:hover,
+.pagination-service > li.active > span:hover,
+.pagination-service > li.active > a:focus,
+.pagination-service > li.active > span:focus{
+   background-color: $service-color !important;
+   border-color: $service-color !important;
    color: $white-color;
 }
 
