--- a/app/assets/stylesheets/bases/_original-variables.scss
+++ b/app/assets/stylesheets/bases/_original-variables.scss
@@ -3,7 +3,9 @@
  ****************/
 
 // colors
-$good-pink: #e07171;
-$bad-blue: #30aebe;
+$original-good-pink: #e07171;
+$original-bad-blue: #30aebe;
 $service-color: #ffb900;
 $service-light-color: #fae9bb;
+$original-light-gray: #f5f5f5;
+$original-darker-text: #444444
