--- a/app/assets/stylesheets/bases/_shared.scss
+++ b/app/assets/stylesheets/bases/_shared.scss
@@ -31,7 +31,7 @@
     padding-top: 16px;
     padding-right: 15px;
     padding-left: 15px;
-    border-top: solid 3px #f5f5f5;
+    border-top: solid 3px $original-light-gray;
   }
 
   &__text {
