--- a/app/views/shared/_destroy_user_modal.html.erb
+++ b/app/views/shared/_destroy_user_modal.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="modal-body">
         本当にアカウントを削除しますか？<br>
-        アカウントを削除すると、あなたに届いた全ての評価も削除されます。
+        アカウントを削除すると、あなたに届いた全ての評価も削除され、二度と復元できません。
       </div>
       <div class="modal-footer">
         <div class="left-side">
