--- a/app/assets/stylesheets/bases/_original-variables.scss
+++ b/app/assets/stylesheets/bases/_original-variables.scss
@@ -8,4 +8,4 @@ $original-bad-blue: #30aebe;
 $service-color: #ffb900;
 $service-light-color: #fae9bb;
 $original-light-gray: #f5f5f5;
-$original-darker-text: #444444
+$original-darker-text: #444444;
