--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -24,7 +24,7 @@
   </div>
 <% end %>
 
-<% if !user_signed_in? %>
+<% if !user_signed_in? && !current_page?(controller: 'home', action: 'top') %>
   <div class="alert alert-warning">
     <div class="alert-wrapper">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
