--- a/app/views/books/_index_tabs.html.erb
+++ b/app/views/books/_index_tabs.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs nav-justified">
   <li class="nav-item">
-    <%= active_link_to "書き込んだ人", commented_books_path, class: "nav-link" %>
+    <%= active_link_to "書き込んだ人", reviewed_books_path, class: "nav-link" %>
   </li>
   <li class="nav-item">
     <%= active_link_to "フォロワー", following_books_path, class: "nav-link" %>
