--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -41,7 +41,7 @@
     </h2>
     <div class="row">
       <div class="col-md-4 col-12 text-center mb-5">
-        <%= image_tag "lp_share", class: "lp-content__image--w-30" %>
+        <%= image_tag "lp_share.png", class: "lp-content__image--w-30" %>
         <h3 class="lp-content__subtitle mt-0 mb-2">
           SNSで通信簿をシェア
         </h3>
@@ -50,7 +50,7 @@
         </span>
       </div>
       <div class="col-md-4 col-12 text-center mb-5 mt-5 mt-md-0">
-        <%= image_tag "lp_check", class: "lp-content__image--w-40" %>
+        <%= image_tag "lp_check.png", class: "lp-content__image--w-40" %>
         <h3 class="lp-content__subtitle mt-3 mb-2">
           届いた評価を承認・コメント
         </h3>
@@ -59,7 +59,7 @@
         </span>
       </div>
       <div class="col-md-4 col-12 text-center mb-5 mt-5 mt-md-0">
-        <%= image_tag "lp_friends", class: "lp-content__image--w-40" %>
+        <%= image_tag "lp_friends.png", class: "lp-content__image--w-40" %>
         <h3 class="lp-content__subtitle mt-2 mb-2">
           友達の通信簿を覗く
         </h3>
