make two symble same size

--- a/app/views/books/_book_card.html.erb
+++ b/app/views/books/_book_card.html.erb
@@ -15,7 +15,7 @@
     <p class="card-description text-left">
       <% reviews.each do |review| %>
         <span class="card__text">
-          <i class="<%= review_type_symbol(review) %> mr-2"></i><%= review.content %><br>
+          <i class="<%= review_type_symbol(review) %>"></i><%= review.content %><br>
         </span>
       <% end %>
     </p>
