--- a/app/views/books/check.html.erb
+++ b/app/views/books/check.html.erb
@@ -15,7 +15,7 @@
         <div class="container">
           <div class="row">
             <div class="card-body col-md-10 col-9">
-              <i class="<%= review_type_symbol(review) %> mr-2"></i><%= review.content %>
+              <i class="<%= review_type_symbol(review) %>"></i><%= review.content %>
             </div>
             <div class="col-md-1 col-2 pl-0 pr-0 d-flex-align-middle">
               <%= button_tag "承認", class: "btn btn-sm btn-service btn-round align-middle__child modal-show",
