--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,11 @@
 <% set_meta_tags books_show_meta_tags %>
+
 <% if user_signed_in? && @user.id == current_user.id %>
   <section class="page-heading mb-4">
     <h1 class="page-heading__title mb-4">
       多くの人にシェアして<br>評定を書いてもらおう！
     </h1>
-    <%= link_to "評定を募集する！", "#", class: "btn btn-service btn-round btn-lg shadow-sm" %>
+    <%= link_to "評定を募集する！", books_show_twitter_share_url(@user), class: "btn btn-service btn-round btn-lg shadow-sm", target: '_blank' %>
   </section>
 <% else %>
   <section class="mb-4">
@@ -17,6 +18,7 @@
     <%= render partial: "books/review_form", locals: { book: @book, review: @review } %>
   </section>
 <% end %>
+
 <section class="page-section mb-4">
   <p class="page-section__title sp-full-width mb-4">
     <%= @user.name %>さんの通信簿
@@ -35,6 +37,7 @@
       <%= link_to "自分の通信簿を作る！", root_path, class: "btn btn-service btn-round shadow-sm" %>
     <% end %>
   </div>
+
   <% if user_signed_in? && @user.id == current_user.id %>
     <p class="text-center mb-3">
       こっそり自分の通信簿もつけられます...！
@@ -44,6 +47,7 @@
     </section>
   <% end %>
 </section>
+
 <section class="page-section mb-4">
   <p class="page-section__title sp-full-width mb-4">
     友達の通信簿
