update review edit

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -10,5 +10,5 @@
     </p>
   </div>
 
-  <%= render partial: "books/review_check_table", locals: { reviews: @checked_reviews } %>
+  <%= render partial: "books/review_edit_table", locals: { reviews: @checked_reviews } %>
 </section>
