--- a/app/views/books/_index_contents.html.erb
+++ b/app/views/books/_index_contents.html.erb
@@ -3,7 +3,7 @@
     <div class="col-12">
       <% books.each do |book| %>
         <%= link_to book_path(book) do %>
-          <div class="book-thumbnail mb-3">
+          <div class="book-thumbnail mb-4">
             <%= image_tag "book_with_review.png", class: "col-md-6 offset-md-3 w-100" %>
             <%= image_tag book.user.image, class: "book-thumbnail__avatar" %>
             <span class="book-thumbnail__title"><%= book.user.name %>の通信簿</span>
@@ -24,9 +24,11 @@
           </div>
         <% end %>
       <% end %>
-      <div class="mt-3">
-        <%= paginate books, window: 1 %>
-      </div>
+      <% if %w[reviewed_books following_books].any? { |name| current_page?(send("#{name}_path")) } %>
+        <div class="mt-3">
+          <%= paginate books, window: 1 %>
+        </div>
+      <% end %>
     </div>
   </div>
 <% else %>
