--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,7 +21,7 @@
 
 <section class="page-section mb-4">
   <p class="page-section__title sp-full-width mb-4">
-    <%= @user.name %>さんの通信簿
+    <%= @user.name %>の通信簿
   </p>
   <div class="text-center">
     <% if user_signed_in? && @user.id == current_user.id %>
