--- a/app/views/home/privacy.html.erb
+++ b/app/views/home/privacy.html.erb
@@ -239,6 +239,6 @@
   </p>
   <p class="policy__text">
     個人情報管理責任者：みんなの通信簿運営団体 代表 設楽広太<br>
-    申請先：essobogkai(at)gmail.com
+    申請先：official.friendsreview@gmail.com
   </p>
 </div>
